# MAI_OS_Course

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
KP/: CMakeLists.txt  common.cpp  common.hpp  test.sh
KP/client/: CMakeLists.txt  main.cpp
KP/client/include/: Client.hpp
KP/client/src/: Client.cpp
KP/server/: CMakeLists.txt  main.cpp
KP/server/include/: Game.hpp  GameManager.hpp  Server.hpp
KP/server/src/: Game.cpp  GameManager.cpp  Server.cpp
Lab1/lab_files/: build.sh  child.c  main.c
Lab2/lab_files/: CMakeLists.txt  Makefile  cmake_install.cmake
Lab2/lab_files/src/: generator.py  main.cpp
Lab3/: Makefile  main.cpp  out_1
Lab4/: CMakeLists.txt  Makefile  build.sh
Lab4/include/: lib_1.hpp  lib_2.hpp
Lab4/src/: lib1_impl.cpp  lib2_impl.cpp  program1.cpp  program2.cpp
